# slidev-agent

./: .gitignore  .pre-commit-config.yaml  README.md  build.sh  index.html  package.json  pnpm-lock.yaml  pyproject.toml  slides.md  test_full_pipeline.py  test_python_hash.py
.github/workflows/: deploy.yml
demo/: index.html
slide_agent/: __init__.py  agent_graph.py  cli.py  config.py  config_schemas.py  llm.py  models.py
slide_agent/generators/: __init__.py  slide_generator.py
slide_agent/slides/presentation-logistic-regression/: meta.json  package.json  slides.md
slide_agent/templates/: bullets_slide.md.j2  code_slide.md.j2  comparison_slide.md.j2  deck_frontmatter.md.j2  quote_slide.md.j2  title_slide.md.j2
slide_agent/writers/: __init__.py  filesystem_writer.py
slides/presentation-data-science-basics/: meta.json  package.json  slides.md
slides/presentation-datenbanken/: meta.json  package.json  slides.md
slides/presentation-deep-learning/: meta.json  package.json  slides.md
slides/presentation-künstliche-intelligenz/: meta.json  package.json  slides.md
slides/presentation-logistic-regression/: meta.json  package.json  slides.md
slides/presentation-machine-learning-basics/: meta.json  package.json  slides.md
slides/presentation-machine-learning-grundlagen/: meta.json  package.json  slides.md
slides/presentation-neural-networks/: meta.json  package.json  slides.md
slides/presentation-python-functions/: meta.json  package.json  slides.md
slides/presentation-web-development-basics/: meta.json  package.json  slides.md
